tests/ui/macros/best-failure.stderr
error: no rules expected the token `$`
  --> $DIR/best-failure.rs:4:30
   |
LL |   macro_rules! number {
   |   -------------------
   |   |
   |  _when calling this macro
   | |
LL | |     (neg false, $self:ident) => { $self };
LL | |     ($signed:tt => $ty:ty;) => {
LL | |         number!(neg $signed, $self);
   | |                              ^^^^^ no rules expected this token in macro call
LL | |
LL | |     };
LL | | }
   | |_- in this expansion of `number!`
LL |
LL |   number! { false => u8; }
   |   ------------------------ in this macro invocation
   |
note: while trying to match meta-variable `$self:ident`
  --> $DIR/best-failure.rs:2:17
   |
LL |     (neg false, $self:ident) => { $self };
   |                 ^^^^^^^^^^^

error: aborting due to previous error

